--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,11 +10,26 @@
 <body>
 
 <app-header></app-header>
-<div>
-  <img src="" alt="">
-</div>
 
 <router-outlet></router-outlet>
+
+<footer>
+  <div class="container">
+    <div class="for-cooperation">
+      <div class="for-cooperation__1 for-cooperation__text">По вопросам сотрудничества:</div>
+      <div class="for-cooperation__2 for-cooperation__text">8 965 381-82-31</div>
+      <div class="for-cooperation__3 for-cooperation__text">tm-mospolytech@gmail.com</div>
+    </div>
+    <div class="social">
+      <div>Подписывайтесь на нас в социальных сетях:</div>
+      <div class="social__link-container">
+        <a href="" class="social__link"><img src="assets/images/social-vk.png" alt="" class="social__link-image"></a>
+        <a href="" class="social__link"><img src="assets/images/social-instagram.png" alt="" class="social__link-image"></a>
+        <a href="" class="social__link"><img src="assets/images/social-twitter.png" alt="" class="social__link-image"></a>
+      </div>
+    </div>
+  </div>
+</footer>
 
 </body>
 </html>
