--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,8 +1,12 @@
 <header>
   <div class="container">
-    <div class="logo"><img src="" alt="" style="background-color: red; display: block; height: 52px; width: 140px"></div>
+    <div class="logo">
+      <a routerLink="/">
+        <img class="logo__image" src="assets/images/header-logo.png" alt="">
+      </a>
+    </div>
     <div class="nav">
-      <div class="nav-item"><a href="" class="nav-link">О нас</a></div>
+      <div class="nav-item"><a href="f" class="nav-link">О нас</a></div>
       <div class="nav-item"><a href="" class="nav-link">Афиша</a></div>
       <div class="nav-item"><a href="" class="nav-link">Галерея</a></div>
       <div class="nav-item"><a href="" class="nav-link">Портфолио</a></div>
