--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -1,6 +1,6 @@
 <div class="intro">
-  <img src="" alt="" class="intro__image">
-  <div class="intro__arrow"></div>
+  <img src="assets/images/tm-logo-prime.png" alt="" class="intro__image">
+  <div class="intro__arrow-down"></div>
 </div>
 
 <div class="slogan-part">
