--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -13,40 +13,56 @@
 
 <div class="talents">
   <div class="container">
-    <h2>Здесь мы раскрываем все возможности и таланты человека!</h2>
+    <div><h2 class="talents__title">Здесь мы раскрываем все возможности и таланты человека!</h2></div>
     <div class="talent-list">
       <div class="talents__talent talent">
-        <div class="talent__circle"><img src="" alt="" class="talent__image"></div>
+        <div class="talent__circle t1" style="background-color: #f539ad;"><img src="assets/images/talent-actor.png" alt="" class="talent__image"></div>
         <div class="talent__title">Актерское мастерство</div>
       </div>
       <div class="talents__talent talent">
-        <div class="talent__circle"><img src="" alt="" class="talent__image"></div>
-        <div class="talent__title">Актерское мастерство</div>
+        <div class="talent__circle t2" style="background-color: #C35C63;"><img src="assets/images/talent-dance.png" alt="" class="talent__image"></div>
+        <div class="talent__title">Танцы</div>
       </div>
       <div class="talents__talent talent">
-        <div class="talent__circle"><img src="" alt="" class="talent__image"></div>
-        <div class="talent__title">Актерское мастерство</div>
+        <div class="talent__circle t3" style="background-color: #fd2afc;"><img src="assets/images/talent-vocal.png" alt="" class="talent__image"></div>
+        <div class="talent__title">Вокал</div>
       </div>
       <div class="talents__talent talent">
-        <div class="talent__circle"><img src="" alt="" class="talent__image"></div>
-        <div class="talent__title">Актерское мастерство</div>
+        <div class="talent__circle t4" style="background-color: black;"><img src="assets/images/talent-mixer.png" alt="" class="talent__image"></div>
+        <div class="talent__title">Техническое Обеспечение</div>
       </div>
     </div>
   </div>
 </div>
 
 <div class="perfomance-view">
-  <h1>Наши репертуарные спекакли</h1>
+  <h1 class="perfomance-view__title">Наши репертуарные спекакли</h1>
   <div class="slider">
     <div class="slide">
-      <div class="slide__text-container">
-        <h3 class="slide__title">Оракул любви</h3>
-        <div class="slide__description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur dicta dolor ducimus eius in ipsam iste labore maxime quas quidem. Culpa dicta earum fugiat fugit in non praesentium provident ratione.</div>
+      <div class="slide__left-side">
+        <div class="slide-text-vertical-centering-container">
+          <h3 class="slide__title">Оракул любви</h3>
+          <div class="slide__description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur dicta
+            dolor ducimus eius in ipsam iste labore maxime quas quidem. Culpa dicta earum fugiat fugit in non
+            praesentium provident ratione.
+          </div>
+        </div>
       </div>
-      <div class="slider__right-part">
-
+      <div class="slider__right-side">
+        <div class="slide__image" style=""></div>
       </div>
     </div>
   </div>
 </div>
 
+
+<div class="invitation">
+  <div class="invitation__background"></div>
+  <div class="container">
+    <div class="invitation__title-container text-centering"><h2 class="invitation__title">Приходите к нам на спектакли!</h2></div>
+    <div class="invitation__link-container fd2afc"><a href="" class="invitation__link">Узнать о расписании выступлений</a></div>
+  </div>
+</div>
+<!--<div class="spacing">-->
+<!--  <div>[здесь мог быть ваш контент]</div>-->
+<!--</div>-->
