--- a/src/style/style.css
+++ b/src/style/style.css
@@ -9,8 +9,13 @@ body {
 .container {
   margin: 0 auto;
   max-width: 1100px;
+  padding: 0 16px;
 }
 
 a:hover {
   cursor: pointer !important;
+}
+
+.text-centering {
+  text-align: center;
 }
