--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -28,3 +28,12 @@ footer .container {
   margin-left: 8px;
   display: block;
 }
+
+@media (max-width: 768px) {
+  footer .container {
+    flex-direction: column;
+  }
+  .social {
+    margin-top: 16px;
+  }
+}
