--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -5,8 +5,9 @@
         <img class="logo__image" src="assets/images/header-logo.png" alt="">
       </a>
     </div>
-    <div class="nav">
-      <div class="nav-item"><a href="f" class="nav-link">О нас</a></div>
+    <div class="burger-button" (click)="burgerButtonTapped()"></div>
+    <div class="nav" [class.mobileNavHide]="this.shouldHideMobileNav">
+      <div class="nav-item"><a href="" class="nav-link">О нас</a></div>
       <div class="nav-item"><a href="" class="nav-link">Афиша</a></div>
       <div class="nav-item"><a href="" class="nav-link">Галерея</a></div>
       <div class="nav-item"><a href="" class="nav-link">Портфолио</a></div>
