--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -1,55 +1,66 @@
 <div class="intro">
   <img src="assets/images/tm-logo-prime.png" alt="" class="intro__image">
-  <div class="intro__arrow-down"></div>
+  <div class="intro__arrow-down wow bounce" data-wow-delay="4.2s"></div>
 </div>
 
 <div class="slogan-part">
   <div class="slogan-part__body">
-    <div class="slogan-part__text slogan-part__text-1">Творческая Мастерская -</div>
-    <div class="slogan-part__text slogan-part__text-2">это коллектив активных разносторонних людей,</div>
-    <div class="slogan-part__text slogan-part__text-3">которые хотят познать все грани творчества!</div>
+    <div class="slogan-part__text slogan-part__text-1 wow fadeInLeft" data-wow-duration="2s" data-wow-offset="50">Творческая Мастерская -</div>
+    <div class="slogan-part__text slogan-part__text-2 wow fadeInRight" data-wow-duration="2s" data-wow-offset="50">это коллектив активных разносторонних людей,</div>
+    <div class="slogan-part__text slogan-part__text-3 wow fadeInRight" data-wow-duration="2s" data-wow-offset="30">которые хотят познать все грани творчества!</div>
   </div>
 </div>
 
 <div class="talents">
   <div class="container">
-    <div><h2 class="talents__title">Здесь мы раскрываем все возможности и таланты человека!</h2></div>
+    <div class="wow slideInLeft" data-wow-duration="2.3s" data-wow-offset="5">
+      <h2 class="talents__title" >Здесь мы открываем возможности и развиваем таланты человека!</h2>
+    </div>
     <div class="talent-list">
       <div class="talents__talent talent">
-        <div class="talent__circle t1" style="background-color: #f539ad;"><img src="assets/images/talent-actor.png" alt="" class="talent__image"></div>
-        <div class="talent__title">Актерское мастерство</div>
+        <div class="talent__circle t1 wow flipInY" data-wow-offset="40" data-wow-delay="1s" data-wow-duration="3.2s" style="background: radial-gradient(at top left, rgba(79, 144, 241, 0.89), rgba(37, 78, 139, 0.89)); box-shadow: 4px 4px 10px rgba(122, 122, 122, 0.3); ">
+          <img src="assets/images/talent-actor.png"
+            alt="" class="talent__image "></div>
+        <div class="talent__title wow fadeInDown" data-wow-offset="20" data-wow-delay="0.5s" data-wow-duration="2.5s">Актёрское мастерство</div>
       </div>
       <div class="talents__talent talent">
-        <div class="talent__circle t2" style="background-color: #C35C63;"><img src="assets/images/talent-dance.png" alt="" class="talent__image"></div>
-        <div class="talent__title">Танцы</div>
+        <div class="talent__circle t2 wow flipInX" data-wow-offset="40" data-wow-delay="2.2s" data-wow-duration="3.2s" style="background: radial-gradient(at top left, rgba(185, 97, 236, 0.89), rgba(114, 55, 138, 0.89)); box-shadow: 4px 4px 10px rgba(122, 122, 122, 0.3);">
+          <img src="assets/images/talent-dance.png"
+            alt="" class="talent__image "></div>
+        <div class="talent__title wow fadeInDown" data-wow-offset="20" data-wow-delay="1.8s" data-wow-duration="2.5s">Танцы</div>
       </div>
       <div class="talents__talent talent">
-        <div class="talent__circle t3" style="background-color: #fd2afc;"><img src="assets/images/talent-vocal.png" alt="" class="talent__image"></div>
-        <div class="talent__title">Вокал</div>
+        <div class="talent__circle t3 wow flipInY" data-wow-offset="40" data-wow-delay="3.4s" data-wow-duration="3.2s"   style="background: radial-gradient(at top left, rgba(238, 117, 218, 0.89),rgba(190, 81, 167, 0.89)); box-shadow: 4px 4px 10px rgba(122, 122, 122, 0.3);">
+          <img src="assets/images/talent-vocal.png"
+            alt="" class="talent__image"></div>
+        <div class="talent__title wow fadeInDown" data-wow-offset="20" data-wow-delay="2.9s" data-wow-duration="2.4s">Вокал</div>
       </div>
       <div class="talents__talent talent">
-        <div class="talent__circle t4" style="background-color: black;"><img src="assets/images/talent-mixer.png" alt="" class="talent__image"></div>
-        <div class="talent__title">Техническое Обеспечение</div>
+        <div class="talent__circle t4 wow flipInX" data-wow-offset="40" data-wow-delay="4.6s" data-wow-duration="3.2s" style="background: radial-gradient(at top left, rgba(85, 85, 85, 0.89), rgb(0, 0, 0)); box-shadow: 4px 4px 10px rgba(122, 122, 122, 0.3);">
+          <img src="assets/images/talent-mixer.png" alt=""
+            class="talent__image"></div>
+        <div class="talent__title wow fadeInDown" data-wow-offset="20" data-wow-delay="4.1s" data-wow-duration="2.4s">Техническое Обеспечение</div>
       </div>
     </div>
   </div>
 </div>
 
 <div class="perfomance-view">
-  <h1 class="perfomance-view__title">Наши репертуарные спекакли</h1>
+  <h1 class="perfomance-view__title">Наши репертуарные спектакли</h1>
   <div class="slider">
     <div class="slide">
-      <div class="slide__left-side">
+      <div class="slide__left-side wow slideInLeft" data-wow-duration="3.6s" data-wow-offset="105">
         <div class="slide-text-vertical-centering-container">
           <h3 class="slide__title">Оракул любви</h3>
-          <div class="slide__description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur dicta
+          <div class="slide__description">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur dicta
             dolor ducimus eius in ipsam iste labore maxime quas quidem. Culpa dicta earum fugiat fugit in non
             praesentium provident ratione.
           </div>
         </div>
       </div>
       <div class="slider__right-side">
-        <div class="slide__image" style=""></div>
+        <div class="slide__image wow slideInRight" data-wow-duration="3.8s" data-wow-offset="105"></div>
       </div>
     </div>
   </div>
@@ -59,10 +70,15 @@
 <div class="invitation">
   <div class="invitation__background"></div>
   <div class="container">
-    <div class="invitation__title-container text-centering"><h2 class="invitation__title">Приходите к нам на спектакли!</h2></div>
-    <div class="invitation__link-container fd2afc"><a href="" class="invitation__link">Узнать о расписании выступлений</a></div>
+    <div class="invitation__title-container text-centering">
+      <h2 class="invitation__title wow slideInRight" data-wow-duration="2.85s" >Приходите к нам на спектакли!</h2>
+    </div>
+    <div class="invitation__link-container fd2afc"><a href="" class="invitation__link">Узнать о расписании
+        выступлений</a></div>
   </div>
 </div>
+
+
 <!--<div class="spacing">-->
 <!--  <div>[здесь мог быть ваш контент]</div>-->
 <!--</div>-->
