new design first version layout implemented

--- a/src/app/main-page/main-page.component.css
+++ b/src/app/main-page/main-page.component.css
@@ -1,12 +1,10 @@
-.intro {
+.intro-section {
   position: relative;
 }
 .intro__image {
   margin: 0 auto;
   display: block;
-  padding: 120px 0px 140px;
-  height: 285px;
-  width: 300px;
+
 }
 .intro__arrow-down {
   background-image: url("src/assets/images/black-arrow-down.png");
@@ -14,276 +12,6 @@
   width: 30px;
   height: 16px;
   background-size: contain;
-  cursor: pointer;
+  /*cursor: pointer;*/
   margin: 0 auto 16px;
-}
-
-
-.slogan-part {
-  background-image: url("src/assets/images/slogan-photo-colored.png");
-  background-size: cover;
-  background-position: center;
-  color: white;
-  /*font-weight: 300;*/
-  font-family: "DIN Pro Condensed";
-  height: 530px;
-}
-.slogan-part__body {
-  margin: 0 auto;
-  padding: 150px 0;
-  max-width: 600px;
-}
-.slogan-part__text {
-  padding: 8px;
-}
-.slogan-part__text-1 {
-  text-align: left;
-  font-size: 44px;
-  /*font-weight: 400;*/
-}
-.slogan-part__text-2 {
-  text-align: center;
-  font-size: 32px;
-}
-.slogan-part__text-3 {
-  text-align: right;
-  font-size: 33px;
-}
-
-
-.talents {
-  padding: 90px 0;
-  font-family: "DIN Pro Condensed";
-}
-.talents__title {
-  /*font-weight: 300;*/
-  position: relative;
-  display: inline-block;
-  z-index: 1;
-  color: white;
-  font-size: 30px;
-  background:linear-gradient(to left, rgb(197, 116, 122) 20%, rgb(190, 58, 67));
-  padding: 8px 16px;
-  
-}
-.talents__title::before {
-  content: '';
-  display: block;
-  position: absolute;
-  top:0;
-  right: 0;
-  height: 100%;
-  width: 1000px;
-  background:linear-gradient(to left, rgb(197, 94, 101) 20%, rgb(179, 41, 50));
-  z-index: -1;
-  box-shadow: 4px 4px 9px rgba(122, 122, 122, 0.322);
-}
-.talent-list {
-  display: grid;
-  /*grid-template-columns: ;*/
-  grid-auto-columns: auto;
-  grid-template-columns: repeat(auto-fit, 180px);
-  justify-content: space-around;
-  grid-gap: 24px;
-  max-width: 900px;
-  margin: 60px auto 0;
-}
-
-
-.talent {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-.talents__talent {
-
-}
-.talent__circle {
-  border-radius: 50%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 180px;
-  width: 180px;
-}
-
-.talent__image {
-  transform: scale(0.8);
-}
-.talent__title {
-  margin-top: 8px;
-  text-align: center;
-  font-size: 22px;
-  font-weight: 400;
-  text-shadow: 2px 2px 3px rgba(122, 122, 122, 0.3);
-}
-
-
-.perfomance-view {
-
-}
-.perfomance-view__title {
-  font-size: 40px;
-  text-align: center;
-  margin-top: 24px;
-  font-family: "DIN Pro Condensed";
-  text-shadow: 2px 2px 3px rgba(122, 122, 122, 0.3);
-}
-.slider {
-
-}
-.slide {
-  display: flex;
-  justify-content: space-between;
-  height: 500px;
-  /*background-color: red;*/
-  color: white;
-  background-color: #051C46;
-}
-.slide__left-side {
-  flex-shrink: 10;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-  width: 33.33%;
-}
-
-.slide-text-vertical-centering-container {
-  padding: 0 16px 32px;
-}
-.slide__title {
-  font-size: 38px;
-  text-align: center;
-  font-family: "DIN Pro Condensed";
-}
-.slide__description {
-
-}
-.slider__right-side {
-  overflow: hidden;
-  flex-shrink: 5;
-  width: 66.66%;
-}
-.slide__image {
-  max-width: 100%;
-  height: 100%;
-  user-select: none;
-  background-image: url("src/assets/images/slide1-oracul-lyubvi.png");
-  background-size: cover;
-  background-position: center;
-}
-.spacing {
-  height: 400px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-
-
-
-.invitation {
-  padding: 100px 0;
-  height: 200px;
-  position: relative;
-  overflow: hidden;
-  margin: 120px 0;
-  font-family: "DIN Pro Condensed";
-}
-
-.invitation__title-container {
-  text-align: center;
-}
-.invitation__title {
-  color: white;
-  background:linear-gradient(to right, rgb(197, 94, 101) 20%, rgb(179, 41, 50));
-  padding: 8px;
-  display: inline-block;
-  position: relative;
-  z-index: 1;
-  font-size: 32px;
-}
-.invitation__title::before {
-  content: '';
-  display: block;
-  position: absolute;
-  top: 0;
-  left: 0;
-  height: 100%;
-  width: 2000px;
-  background:linear-gradient(to right, rgb(197, 94, 101) 20%, rgb(179, 41, 50));
-  z-index: -1;
-}
-.invitation__link-container {
-  text-align: center;
-}
-.invitation__link {
-  color: #C35C63;
-  text-decoration: none;
-  position: relative;
-  padding: 8px 12px;
-  display: inline-block;
-  background-color: white;
-  font-size: 22px;
-}
-.invitation__link::after {
-  content: '';
-  display: block;
-  position: absolute;
-  height: 1px;
-  width: 0;
-  background-color: white;
-  left: 0;
-  bottom: 0;
-  transition: width 0.5s, background-color 0.5s, color 0.5s;
-}
-.invitation__link:hover {
-  color: white;
-  background-color: #C35C63;
-}
-.invitation__link:hover::after {
-  width: 100%;
-}
-
-.invitation__background {
-  position: absolute;
-  height: 100%;
-  width: 100%;
-  top: 0;
-  left: 0;
-  background-image: url("src/assets/images/urok-muzhestva.jpg");
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-  z-index: -1;
-  opacity: 1;
-}
-.invitation__background::after {
-  content: '';
-  display: block;
-  background-image: linear-gradient(-45deg, #1189e1, #f539ad);
-  position: absolute;
-  top:0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  opacity: 0.0;
-}
-
-@media (max-width: 768px) {
-  .slide {
-    flex-direction: column;
-    height: auto;
-  }
-  .slide__left-side {
-    width: auto;
-    /*height: 240px;*/
-  }
-  .slider__right-side {
-    width: auto;
-    height: 300px;
-  }
-
-
 }
