--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -1,26 +1,18 @@
 <section class="intro-section">
-
-  <div class="intro__body">
-    <div class="intro__logo-part">
-<!--      <img src="" alt="" class="intro__logo-image">-->
-      <div class="text-logo">
-        <div class="text-logo_p1">ТВОРЧЕСКАЯ</div>
-        <div class="text-logo_p2">МАСТЕРСКАЯ</div>
-      </div>
-      <span class="intro__logo-text">Московского Политеха</span>
+  <div class="container">
+    <div class="intro__body">
+      <img class="intro__image" src="../../assets/images/text-red-logo.png" alt="">
+      <h3 class="intro__greeting">Добро пожаловать</h3>
     </div>
-    <h3>Добро пожаловать</h3>
   </div>
-
   <div class="intro__arrow-down"></div>
-
 </section>
 
 <section class="activities-section">
 
   <div class="container">
     <h3 class="activities__text">Коллектив собрал в себе разносторонних людей,<br>которым интересно творчество в его
-    совокупности</h3>
+      совокупности</h3>
 
     <div class="activities__list">
       <div class="activites__list-row">
@@ -57,7 +49,9 @@
     <div class="you-can__inter-view">
       <ul class="inter-view__text-side">
         <li class="inter-view__parah">Заниматься актерским мастерством и режиссурой</li>
-        <li class="inter-view__parah">Проходить тренинги по развитию актерских способностей и сценодвижению, ораторскому искусству</li>
+        <li class="inter-view__parah">Проходить тренинги по развитию актерских способностей и сценодвижению, ораторскому
+          искусству
+        </li>
         <li class="inter-view__parah">Стать лучшим актером/актрисой университета</li>
         <li class="inter-view__parah active">Создать и воплотить в жизнь свой собственный творческий сценарий</li>
         <li class="inter-view__parah">Участвовать в международных театральных и творческих фестивалях</li>
@@ -120,16 +114,24 @@
 
     <ul class="awards__list">
       <li class="awards__award">Лауреаты театрального фестиваля "АПАРТ-Э" 2016</li>
-      <li class="awards__award">Обладатели гран-при фестиваля "Московская студенческая весна 2018" в номинации "Оригинальный жанр"</li>
-      <li class="awards__award">Лауреаты второй степени фестиваля "Российская студенческая весна 2018" в номинации "Оригинальный жанр"</li>
-      <li class="awards__award">Победители V открытого городского фестиваля молодежных любительских театров «АПАРТЕ» в номинациях «Лучший
+      <li class="awards__award">Обладатели гран-при фестиваля "Московская студенческая весна 2018" в номинации
+        "Оригинальный жанр"
+      </li>
+      <li class="awards__award">Лауреаты второй степени фестиваля "Российская студенческая весна 2018" в номинации
+        "Оригинальный жанр"
+      </li>
+      <li class="awards__award">Победители V открытого городского фестиваля молодежных любительских театров «АПАРТЕ» в
+        номинациях «Лучший
         молодежный театр», «Лучший дуэт», «Лучшая мужская роль второго плана»,
       </li>
-      <li class="awards__award">Обладатели Гран-при конкурса «Студент года – 2019» в номинации «Творческий клуб года»</li>
-      <li class="awards__award">Лауреаты I степени VII Всероссийского театрального фестиваля «Феникс», а также победители в номинациях
+      <li class="awards__award">Обладатели Гран-при конкурса «Студент года – 2019» в номинации «Творческий клуб года»
+      </li>
+      <li class="awards__award">Лауреаты I степени VII Всероссийского театрального фестиваля «Феникс», а также
+        победители в номинациях
         «Лучший костюм», «Лучшая женская роль» и «Лучшая мужская острохарактерная роль»
       </li>
-      <li class="awards__award">Гран-при IV фестиваля «Московская студенческая весна» в номинации «Оригинальный жанр» в направлении
+      <li class="awards__award">Гран-при IV фестиваля «Московская студенческая весна» в номинации «Оригинальный жанр» в
+        направлении
         «Иллюзия» .
       </li>
     </ul>
@@ -145,7 +147,7 @@
 
 <section class="final-slogan-section">
   <div class="container">
-<!--    <img src="" alt="">-->
+    <!--    <img src="" alt="">-->
     <div class="text-logo">
       <div class="text-logo_p1">ТВОРЧЕСКАЯ</div>
       <div class="text-logo_p2">МАСТЕРСКАЯ</div>
