--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -15,28 +15,27 @@
       совокупности</h3>
 
     <div class="activities__list">
-      <div class="activites__list-row">
         <div class="activity">Хареография</div>
         <div class="activity">Актерское мастерство</div>
         <div class="activity">Вокальное исполнение</div>
         <div class="activity">Юмор</div>
-      </div>
-      <div class="activites__list-row">
         <div class="activity">Сценарное искусство</div>
         <div class="activity">Сценография</div>
         <div class="activity">Оригинальный жанр</div>
         <div class="activity">И многое другое</div>
-      </div>
     </div>
+  </div>
 
+  <div class="container">
     <div class="swiper-container activities-swiper">
       <div class="swiper-wrapper">
-        <div class="swiper-slide">Slide 1</div>
-        <div class="swiper-slide">Slide 2</div>
-        <div class="swiper-slide">Slide 3</div>
-        <div class="swiper-slide">Slide 4</div>
-        <div class="swiper-slide">Slide 5</div>
+        <div class="swiper-slide activity-slide"><img class="activity-image" src="../../assets/images/images-by-nastya/sec-2-img-1.jpg" alt=""></div>
+        <div class="swiper-slide activity-slide"><img class="activity-image" src="../../assets/images/images-by-nastya/sec-2-img-2.jpg" alt=""></div>
+        <div class="swiper-slide activity-slide"><img class="activity-image" src="../../assets/images/images-by-nastya/sec-2-img-3.jpg" alt=""></div>
+        <div class="swiper-slide activity-slide"><img class="activity-image" src="../../assets/images/images-by-nastya/sec-2-img-4.jpg" alt=""></div>
       </div>
+      <div class="swiper-button-next"></div>
+      <div class="swiper-button-prev"></div>
     </div>
   </div>
 
