--- a/src/style/style.css
+++ b/src/style/style.css
@@ -8,8 +8,11 @@ body {
   margin: 0;
   font-family: "Gilroy", sans-serif;
   /*font-family: "DIN Pro", sans-serif;*/
-  font-weight: 400;
+  font-weight: 300;
   /*font-size: 20px;*/
+}
+h1,h2,h3,h4,h5,h6 {
+  font-weight: 300;
 }
 .container {
   margin: 0 auto;
