--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -44,36 +44,36 @@
 <section class="you-can-section">
 
   <div class="you-can__body">
-    <h3>У нас можно</h3>
-    <div class="you-can__inter-view">
-      <ul class="inter-view__text-side">
-        <li class="inter-view__parah">Заниматься актерским мастерством и режиссурой</li>
-        <li class="inter-view__parah">Проходить тренинги по развитию актерских способностей и сценодвижению, ораторскому
+    <h3 class="you-can__title">У нас можно</h3>
+    <div class="you-can__split-view">
+      <ul class="split-view__text-side">
+        <li class="split-view__parah">Заниматься актерским мастерством и режиссурой</li>
+        <li class="split-view__parah">Проходить тренинги по развитию актерских способностей и сценодвижению, ораторскому
           искусству
         </li>
-        <li class="inter-view__parah">Стать лучшим актером/актрисой университета</li>
-        <li class="inter-view__parah active">Создать и воплотить в жизнь свой собственный творческий сценарий</li>
-        <li class="inter-view__parah">Участвовать в международных театральных и творческих фестивалях</li>
+        <li class="split-view__parah">Стать лучшим актером/актрисой университета</li>
+        <li class="split-view__parah active">Создать и воплотить в жизнь свой собственный творческий сценарий</li>
+        <li class="split-view__parah">Участвовать в международных театральных и творческих фестивалях</li>
       </ul>
-      <div class="inter-view__image-side">
+      <div class="split-view__image-side">
         <div class="swiper-container">
           <div class="swiper-wrapper">
-            <div class="swiper-slide">Slide 1</div>
-            <div class="swiper-slide">Slide 2</div>
-            <div class="swiper-slide">Slide 3</div>
-            <div class="swiper-slide">Slide 4</div>
-            <div class="swiper-slide">Slide 5</div>
+            <div class="swiper-slide split-view__image"><img class="image" src="../../assets/images/images-by-nastya/sec-3-man.svg" alt=""></div>
+            <div class="swiper-slide split-view__image"><img class="image" src="../../assets/images/images-by-nastya/sec-3-parah-img.svg" alt=""></div>
+            <div class="swiper-slide split-view__image"><img class="image" src="../../assets/images/images-by-nastya/sec-3-man.svg" alt=""></div>
+            <div class="swiper-slide split-view__image"><img class="image" src="../../assets/images/images-by-nastya/sec-3-parah-img.svg" alt=""></div>
+            <div class="swiper-slide split-view__image"><img class="image" src="../../assets/images/images-by-nastya/sec-3-man.svg" alt=""></div>
           </div>
         </div>
       </div>
     </div>
   </div>
 
-  <img src="" alt="" class="decoration-silhouette mask-1">
-  <img src="" alt="" class="decoration-silhouette mask-2">
-  <img src="" alt="" class="decoration-silhouette lamp">
-  <img src="" alt="" class="decoration-silhouette pen">
-  <img src="" alt="" class="decoration-silhouette book">
+  <img src="../../assets/images/images-by-nastya/sec-3-mask-1.svg" alt="" class="decoration-silhouette mask-1">
+  <img src="../../assets/images/images-by-nastya/sec-3-mask-2.svg" alt="" class="decoration-silhouette mask-2">
+  <img src="../../assets/images/images-by-nastya/sec-3-lamp.svg" alt="" class="decoration-silhouette lamp">
+  <img src="../../assets/images/images-by-nastya/sec-3-pen.svg" alt="" class="decoration-silhouette pen">
+  <img src="../../assets/images/images-by-nastya/sec-3-book.svg" alt="" class="decoration-silhouette book">
 
 </section>
 
