--- a/src/style/style.css
+++ b/src/style/style.css
@@ -27,3 +27,9 @@ a:hover {
 .text-centering {
   text-align: center;
 }
+
+.image {
+  max-width: 100%;
+  max-height: 100%;
+  display: inline-block;
+}
